Set-up with page transitions

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
+    "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lorem-ipsum": "^1.4.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
